--- a/configs/imagenet_sr.yaml
+++ b/configs/imagenet_sr.yaml
@@ -3,7 +3,10 @@ model:
   noise_model_type: "unet"
   alpha: 0.001
   load_weights: null
+  load_mu_weights: null
   snr_expansion_n: 1
+  zmd: False
+
 
 training:
   lr: 0.0001
@@ -19,7 +22,7 @@ eval:
   val_len: 100
   
 data:
-  dataset_path: "/bigdata/casus/MLID/maria/imagenet_sample"
+  dataset_path: "/bigdata/imnet"
   n_samples: 100
   batch_size: 2
   im_size: 256
