--- a/configs/imagenet_sr.yaml
+++ b/configs/imagenet_sr.yaml
@@ -6,7 +6,7 @@ model:
   load_mu_weights: null
   snr_expansion_n: 1
   zmd: False
-
+  diff_inp: True
 
 training:
   lr: 0.0001
@@ -14,7 +14,7 @@ training:
   
 eval:
   output_path: "outputs/imagenet"
-  generation_timesteps: 1000
+  generation_timesteps: 200
   checkpoint_freq: 1000
   log_freq: 10
   image_freq: 100
