--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,11 @@ name: Docker-based Python Package CI
 # Trigger the workflow on push to master or dev branches
 on:
   push:
-    branches: [ "master", "dev" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master", "dev" ]
+    branches: [ "main" ]
+  workflow_dispatch: {}
+
 
 jobs:
   build:
