Ignore missing stubs for mypy

--- a/mypy.ini
+++ b/mypy.ini
@@ -30,3 +30,12 @@ ignore_missing_imports = True
 
 [mypy-cupy.*]
 ignore_missing_imports = True
+
+[mypy-tensorflow.*]
+ignore_missing_imports = True
+
+[mypy-tqdm.*]
+ignore_missing_imports = True
+
+[mypy-yaml.*]
+ignore_missing_imports = True
