--- a/configs/biosr.yaml
+++ b/configs/biosr.yaml
@@ -1,13 +1,13 @@
 task: "biosr_sr"
 
 model:
-  noise_model_type: "unet"
+  noise_model_type: "sr3"
   alpha: 0.001
-  load_weights: null
+  load_weights: '/home/gabriel/Documents/p_code/cvdm/outputs/biosr/weights/model_0_4e9fa08f-beb8-4335-907f-32bbe3f70a72.h5'
   load_mu_weights: null
   snr_expansion_n: 1
   zmd: False
-  diff_inp: False
+  diff_inp: True
 
 training:
   lr: 0.0001
@@ -16,18 +16,18 @@ training:
 eval:
   output_path: "outputs/biosr"
   generation_timesteps: 200
-  checkpoint_freq: 1000
+  checkpoint_freq: 10000
   log_freq: 10
-  image_freq: 100
+  image_freq: 1000
   val_freq: 200
   val_len: 100
 
 data:
-  dataset_path: "/bigdata/casus/MLID/maria/biosr_sample"
+  dataset_path: "/media/gabriel/data_hdd/biosr_dataset/train/biosr_ds.npz"
   n_samples: 100
-  batch_size: 2
+  batch_size: 4
   im_size: 256
 
 neptune:
   name: "CVDM"
-  project: "mlid/test"
+  project: "mlid/testing-cvdm"
