--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 numpy~=1.24.4
 pillow~=10.2.0
 scikit-image~=0.21.0
-tensorflow~=2.14.0
+tensorflow[and-cuda]~=2.14
 scikit-learn~=1.3.2
 matplotlib~=3.7.5
 neptune~=1.12.0
 tqdm~=4.66.2
 pyyaml~=6.0.2
-keras~=2.10.0
+keras~=2.14
+tensorflow_addons~=0.23.0
+opencv-python-headless~=4.10
+cupy-cuda11x~=13.3
